--- a/uxui.html
+++ b/uxui.html
@@ -38,7 +38,7 @@
 <!--BODY-->	
 	
 	<svg class="svg">
-		<clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.265,0.044 C0.089,0.029,0,0.451,0,0.451 V0 H1 V1 C0.678,1,0.526,0.065,0.265,0.044"></path></clippath>
+		<clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.282,0.059 C0.092,0.059,0,1,0,1 V0 H1 V0.059 C0.976,0.269,0.873,1,0.722,1 C0.547,1,0.473,0.059,0.282,0.059"></path></clippath>
 	</svg>
 	
 	<div class="content-field first">
@@ -48,7 +48,7 @@
 				<div class="content-field" style="background-color: var(--vuorox-background); height: 200px;">
 					<img src="Liitteet/Vuorox/Hero.png" alt="Vuorox">
 				</div>
-				<div class="divider" style="background-color: var(--vuorox-background); height: 30px"></div>
+				<div class="divider" style="background-color: var(--vuorox-background); height: 20px"></div>
 				<div class="content-field">
 					<h2>Vuorox</h2>
 					<p>An app where nurses can check and manage their work shifts.</p>
@@ -58,7 +58,7 @@
 				<div class="content-field" style=" background-color: var(--finnishdesigners-background); height: 200px;">
 					<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners">
 				</div>
-				<div class="divider" style="background-color: var(--finnishdesigners-background); height: 30px"></div>
+				<div class="divider" style="background-color: var(--finnishdesigners-background); height: 20px"></div>
 				<div class="content-field">
 					<h2>Finnish Designers</h2>
 					<p>Portfolio platform and community for finnish designers.</p>
@@ -68,7 +68,7 @@
 				<div class="content-field" style="background-color: var(--lekatech-background); height: 200px;">
 					<img src="Liitteet/Lekatech/Hero.png" alt="Lekatech">
 				</div>
-				<div class="divider" style="background-color: var(--lekatech-background); height: 30px"></div>
+				<div class="divider" style="background-color: var(--lekatech-background); height: 20px"></div>
 				<div class="content-field">
 					<h2>Lekatech</h2>
 					<p>UI for remote control electric breaker hammer.</p>
