--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 					</div>
 				</div>
 				<div class="content-field" style="align-items: flex-end;">
-					<img src="Liitteet/Portfoliokuva-kehyksella.png" alt="Portfoliopicture" style="width: 75%; margin-right: 15px;">
+					<img src="Liitteet/Portfoliokuva-kehyksella.png" alt="Portfoliopicture" style="width: 80%; margin-right: 15px;">
 				</div>
 			</div>
 		</div>
 		<svg class="svg">
-			<clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.735,0.956 C0.911,0.971,1,0.549,1,0.549 V1 H0 V0 C0.322,0,0.474,0.935,0.735,0.956"></path></clippath>
+			<clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.718,0.941 C0.908,0.941,1,0,1,0 V1 H0 V0.941 C0.024,0.731,0.127,0,0.278,0 C0.453,0,0.527,0.941,0.718,0.941"></path></clippath>
 		</svg>
 		<div class="divider"></div>	
 	</div>
