--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="content-field first">
 			<div class="column reversed">
 				<div class="content-field" style="margin-top: 40px;">
-					<h1>Graphic designer and UX/UI design student!</h1>
+					<h1>Graphic designer and UX/UI design student</h1>
 					<p>Welcome to my portfolio! I'm a soon-to-graduate UX &amp; UI Design student from LAB Institute of Design in Lahti, who has also studied and worked as graphic designer.</p>
 					<div class="buttonsection">
 						<a class="button" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
