--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<h2>About&nbsp;Me</h2>
 			<div class="column">
 				<div class="content-field">
-					<p>I am an UX &amp; UI designer from Helsinki, with a background in graphic design. I've become increasingly interested in front-end development recently so I hope to gravitate toward that in the future. I've also started working as an accessibility expert in my current job, which includes conducting accessibility audits for websites of different public sector entities.<br>
+					<p>I am a UX &amp; UI designer from Helsinki, with a background in graphic design. I've become increasingly interested in web front-end development recently so I hope to gravitate toward that in the future. I've also started working as an accessibility expert in my current job, which includes conducting accessibility audits for websites of different public sector entities.<br>
 					<br>
 					I originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, area of expertise being graphic design. I have worked as a graphic designer in an advertising agency, a web design agency and as a freelancer, having done custom work for both small and large businesses.<br>
 					<br>
