--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 				<div class="content-field">
 					<p>I am a UX &amp; UI designer from Helsinki, with a background in graphic design. I've become increasingly interested in web front-end development recently so I hope to gravitate toward that in the future. I've also started working as an accessibility expert in my current job, which includes conducting accessibility audits for websites of different public sector entities.<br>
 					<br>
-					I originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, area of expertise being graphic design. I have worked as a graphic designer in an advertising agency, a web design agency and as a freelancer, having done custom work for both small and large businesses.<br>
+					I originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, competence area in graphic design. I have worked as a graphic designer in an advertising agency, a web design agency and as a freelancer, having done custom work for both small and large businesses.<br>
 					<br>
-					In 2020–2024 I studied UX &amp; UI design in Lahti Design Institute. I aim to work mostly in that field in the future, although I feel like UX &amp; UI education has helped me to become better graphic designer as well. I am very much a team player and having a history in working in customer service and sales jobs helps me communicate with customers and coworkers alike.</p>
+					In 2020–2024 I studied UX &amp; UI design in LAB Institute of Design and Fine Arts. I aim to work mostly in that field in the future, although I feel like UX &amp; UI education has helped me to become better graphic designer as well. I am very much a team player and having a history in working in customer service and sales jobs helps me communicate with customers and coworkers alike.</p>
 				</div>
 				<hr>
 				<div class="content-field info">
