--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 			<h2>About&nbsp;Me</h2>
 			<div class="column">
 				<div class="content-field">
-					<p>I am a UX &amp; UI designer from Helsinki, with a background in graphic design. I've become increasingly interested in web front-end development recently so I hope to gravitate toward that in the future. I've also started working as an accessibility expert in my current job, which includes conducting accessibility audits for websites of different public sector entities.<br>
+					<p>I am a UX &amp; UI designer from Helsinki, with a background in graphic design. My area of expertise includes various user research, conceptualization, and usability testing methods, as well as the implementation of interactive prototypes. As a graphic designer, I have extensive experience ranging from creating corporate identities to designing publication materials. I have also frequently been involved in frontend development for websites.<br>
 					<br>
-					I originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, competence area in graphic design. I have worked as a graphic designer in an advertising agency, a web design agency and as a freelancer, having done custom work for both small and large businesses.<br>
+					I have recently started working as an accessibility specialist, a role that involves conducting accessibility audits for various public sector organizations. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP), and I am accustomed to prioritizing accessibility in design.<br>
 					<br>
-					In 2020–2024 I studied UX &amp; UI design in LAB Institute of Design and Fine Arts. I aim to work mostly in that field in the future, although I feel like UX &amp; UI education has helped me to become better graphic designer as well. I am very much a team player and having a history in working in customer service and sales jobs helps me communicate with customers and coworkers alike.</p>
+					I originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, competence area in graphic design. I have since worked in an advertising agency, a web design agency and as a freelancer, having done custom work for both small and large businesses. In 2020–2024 I studied UX &amp; UI design in LAB Institute of Design and Fine Arts. My background in graphic design has also supported me in my role as a UX designer. In addition to the design field, I have a background in sales and customer service, which has taught me negotiation skills and the ability to be sales-oriented when needed. I am proficient in working in both finnish and english.</p>
 				</div>
 				<hr>
 				<div class="content-field info">
