--- a/vuorox.html
+++ b/vuorox.html
@@ -32,7 +32,7 @@
 				<div class="content-field">
 					<p>The assignment was to come up with a concept for Plaincomplex's Vuorox-app, an app where nurses can check up their work shifts and manage them. The goal was not to build a finished product, but a concept model that customers can utilize however they wish to further develop their app later. The project was carried out by a three-person team, including myself. I was part of every step of the process.<br>
 					<br>
-					To build a user-friendly concept, we started by conducting semi-structured interviews with nurses. From the interviews we discovered users' main priorities (maximum control over work shifts, simplicity in observing upcoming shifts) and the most common user types (diginatives, change-resistant elderly nurses and non-native nurses).<br>
+					To build a user-friendly concept, we started by conducting semi-structured interviews with nurses. From the interviews we discovered users' main priorities (maximum control over work shifts, simplicity in observing upcoming shifts) and the most common user types.<br>
 					<br>
 					Based on the research we used user flows to map out the main use scenarios and determined design drivers for our app (perceivable at a glance, gives a sense of control, considers different needs, is trustworthy). After that we finally designed a prototype of the app with Figma. We used it to demonstrate the key functions: checking upcoming shifts, leaving shift and day off requests and managing general work time requests. Inclusivity was a priority in our design, all the UI elements were tested for accessibility.</p>
 				</div>
