--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					Graphic Design<br>
 					Service Design<br>
 					Accessibility&nbsp;evalutation<br>
-					Web&nbsp;front&#8209;end&nbsp;development<br>
+					Front&#8209;end&nbsp;development<br>
 					Customer&nbsp;service&nbsp;&amp;&nbsp;sales</p>
 					<h3>Tools</h3>
 					<p>Figma<br>
