--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				</div>
 				<div class="content-field card">
 					<img src="Liitteet/Preeriapingviini/Etusivu.png" alt="Preeriapingviini">
-					<a class="button" href="preeriapingviini.html">View Preeriapingviini</a>
+					<a class="button" href="preeriapingviini.html">View&nbsp;Preeriapingviini</a>
 				</div>
 				<div class="content-field card">
 					<img src="Liitteet/Staffroom/Flyers.png" alt="Staffroom">
