--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<br>
 					I have recently started working as an accessibility specialist, a role that involves conducting accessibility audits for various public sector entities. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP), and I'm accustomed to prioritizing accessibility in design.<br>
 					<br>
-					I originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, competence area in graphic design. I have since worked in an advertising agency, a web design agency and as a freelancer, having done custom work for both small and large businesses. In 2020–2024 I studied UX &amp; UI design in LAB Institute of Design and Fine Arts. My background in graphic design has also supported me in my role as a UX designer. In addition to the design field, I have a background in sales and customer service, which has taught me negotiation skills and the ability to be sales-oriented when needed. I am proficient in working in both finnish and english.</p>
+					I have graduated from Pekka Halonen Academy in 2018 as a visual artisan, competence area in graphic design. I have since worked in an advertising agency, a web design agency and as a freelancer. In 2020–2024 I studied UX &amp; UI design in LAB Institute of Design and Fine Arts. In addition to the design field, I have a background in sales and customer service, which has taught me negotiation skills and the ability to be sales-oriented when needed. I am proficient in working in both finnish and english.</p>
 				</div>
 				<hr>
 				<div class="content-field info">
