--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="content-field">
+			<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5ad70ff8-d814-424b-9828-de0ce114c4f8" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+		</div>
 		
 		<div class="content-field" id="worksamples">
 			<h2>Work&nbsp;samples</h2>
