--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<div class="content-field">
 			<div class="column reversed">
-				<div class="content-field" style="justify-content: center;">
+				<div class="content-field info">
 					<h1 style="text-align: left;">UX/UI &amp; graphic designer from Helsinki with expertise in accessibility</h1>
 				</div>
 				<div class="content-field" style="width: fit-content;">
@@ -37,6 +37,7 @@
 					</div>
 				</div>
 			</div>
+			<img src="Liitteet/iaap-certified-professionals-in-accessibility-core-competencies-cpacc.png" alt="IAAP CPACC badge" style="width: 104px; height: 104px; margin: 0 auto;">
 		</div>
 		
 		<div class="content-field" id="worksamples">
