--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 		<div class="content-field">
 			<div class="column reversed">
-				<div class="content-field info">
+				<div class="content-field" style="justify-content: center;">
 					<h1 style="text-align: left;">UX/UI &amp; graphic designer from Helsinki with expertise in accessibility</h1>
 				</div>
-				<div class="content-field" style="width: fit-content;">
+				<div class="content-field info">
 					<div class="pictureframe">
 						<img src="Liitteet/Profiilikuva.jpg" alt="Picture of me" style="max-height: none;">
 					</div>
