--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 					</div>
 				</div>
 			</div>
-			<img src="Liitteet/iaap-certified-professionals-in-accessibility-core-competencies-cpacc.png" alt="IAAP CPACC badge" style="width: 104px; height: 104px; margin: 0 auto;">
+			<div class="column">
+				<img src="Liitteet/student-member.png" alt="IAAP member badge" style="margin: 0 auto;">
+				<img src="Liitteet/iaap-cpacc.png" alt="IAAP CPACC badge" style="margin: 0 auto;">
+			</div>
 		</div>
 		
 		<div class="content-field" id="worksamples">
