--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 				</div>
 			</div>
 			<div class="column">
-				<img class="badge" src="Liitteet/student-member.png" alt="IAAP member badge" style="margin: 0 auto;">
-				<img class="badge" src="Liitteet/iaap-cpacc.png" alt="IAAP CPACC badge" style="margin: 0 auto;">
+				<img class="badge" src="Liitteet/student-member.png" alt="IAAP member badge" style="margin-left: auto;">
+				<img class="badge" src="Liitteet/iaap-cpacc.png" alt="IAAP CPACC badge" style="margin-right: auto;">
 			</div>
 		</div>
 		
