--- a/index.html
+++ b/index.html
@@ -26,20 +26,49 @@
 	
 	<main>
 
-		<div class="content-field">
+		<div class="content-field"  id="aboutme">
 			<div class="column reversed">
 				<div class="content-field" style="justify-content: center;">
 					<h1 style="text-align: left;">UX/UI &amp; graphic designer from Helsinki with expertise in accessibility</h1>
 				</div>
-				<div class="content-field info">
+				<div class="content-field" style="width: 40%;">
 					<div class="pictureframe">
-						<img src="Liitteet/Profiilikuva.jpg" alt="Picture of me" style="max-height: none;">
+						<img src="Liitteet/Profiilikuva.jpg" alt="Picture of me">
 					</div>
 				</div>
 			</div>
 			<div class="column">
-				<img class="badge" src="Liitteet/student-member.png" alt="IAAP member badge" style="margin-left: auto;">
-				<img class="badge" src="Liitteet/iaap-cpacc.png" alt="IAAP CPACC badge" style="margin-right: auto;">
+				<div class="content-field">
+					<p>I am a UX &amp; UI designer from Helsinki, with a background in graphic design. I am proficient in various user research, conceptualization, and usability testing methods, as well as the implementation of interactive prototypes. As a graphic designer, I have extensive experience ranging from creating corporate identities to designing publication materials. I have also frequently been involved in frontend development for websites.<br>
+					<br>
+					I have recently started working as an accessibility specialist, a role that involves conducting accessibility audits for various public sector entities. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP), and I am accustomed to prioritizing accessibility in design.<br>
+					<br>
+					I have graduated from Pekka Halonen Academy in 2018 as a visual artisan, competence area in graphic design. I have since worked in an advertising agency, a web design agency and as a freelancer. In 2020–2024 I studied UX &amp; UI design in LAB Institute of Design and Fine Arts. In addition to the design field, I have a background in sales and customer service, which has taught me negotiation skills and the ability to be sales-oriented when needed. I am proficient in working in both Finnish and English.</p>
+				</div>
+			</div>
+			<div class="content-field" style="width: 40%;">
+				<h3>Skills</h3>
+				<div class="tagsection">
+					<div class="tag">UX &amp; UI</div>
+					<div class="tag">Graphic Design</div>
+					<div class="tag">Service Design</div>
+					<div class="tag">Accessibility</div>
+					<div class="tag">Front&#8209;end</div>
+					<div class="tag">Customer service</div>
+				</div>
+				<h3>Tools</h3>
+				<div class="tagsection">
+					<div class="tag">Figma</div>
+					<div class="tag">Adobe Id, Ai, Ps</div>
+					<div class="tag">HTML &amp; CSS</div>
+					<div class="tag">Axe DevTools</div>
+					<div class="tag">Wave</div>
+					<div class="tag">Office 365</div>
+				</div>
+				<div class="minisection">
+					<img class="badge" src="Liitteet/student-member.png" alt="IAAP member badge">
+					<img class="badge" src="Liitteet/iaap-cpacc.png" alt="IAAP CPACC badge">
+				</div>
 			</div>
 		</div>
 		
@@ -65,7 +94,7 @@
 			</div>
 		</div>
 
-		<div class="content-field" id="aboutme">
+		<div class="content-field">
 			<h2>About&nbsp;Me</h2>
 			<div class="column">
 				<div class="content-field">
