--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="content-field"  id="aboutme">
 			<div class="column reversed">
 				<div class="content-field" style="justify-content: center;">
-					<h1 style="text-align: left;">UX/UI &amp; graphic designer from Helsinki with expertise in accessibility</h1>
+					<h1 style="text-align: left;">UX &amp; UI designer with expertise in accessibility</h1>
 				</div>
 				<div class="content-field" style="width: 40%;">
 					<div class="pictureframe">
@@ -90,35 +90,6 @@
 				<div class="content-field card">
 					<img src="Liitteet/Staffroom/Flyers.png" alt="Staffroom">
 					<a class="button" href="staffroom.html">View Staffroom</a>
-				</div>
-			</div>
-		</div>
-
-		<div class="content-field">
-			<h2>About&nbsp;Me</h2>
-			<div class="column">
-				<div class="content-field">
-					<p>I am a UX &amp; UI designer from Helsinki, with a background in graphic design. I am proficient in various user research, conceptualization, and usability testing methods, as well as the implementation of interactive prototypes. As a graphic designer, I have extensive experience ranging from creating corporate identities to designing publication materials. I have also frequently been involved in frontend development for websites.<br>
-					<br>
-					I have recently started working as an accessibility specialist, a role that involves conducting accessibility audits for various public sector entities. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP), and I am accustomed to prioritizing accessibility in design.<br>
-					<br>
-					I have graduated from Pekka Halonen Academy in 2018 as a visual artisan, competence area in graphic design. I have since worked in an advertising agency, a web design agency and as a freelancer. In 2020–2024 I studied UX &amp; UI design in LAB Institute of Design and Fine Arts. In addition to the design field, I have a background in sales and customer service, which has taught me negotiation skills and the ability to be sales-oriented when needed. I am proficient in working in both Finnish and English.</p>
-				</div>
-				<hr>
-				<div class="content-field info">
-					<h3>Skills</h3>
-					<p>UX &amp; UI Design<br>
-					Graphic Design<br>
-					Service Design<br>
-					Accessibility&nbsp;evalutation<br>
-					Front&#8209;end&nbsp;development<br>
-					Customer&nbsp;service&nbsp;&amp;&nbsp;sales</p>
-					<h3>Tools</h3>
-					<p>Figma<br>
-					Adobe Id, Ai, Ps<br>
-					HTML &amp; CSS<br>
-					Axe DevTools<br>
-					Wave</p>
 				</div>
 			</div>
 		</div>
