--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<div class="content-field">
 					<p>I am a UX &amp; UI designer from Helsinki, with a background in graphic design. I am proficient in various user research, conceptualization, and usability testing methods, as well as the implementation of interactive prototypes. As a graphic designer, I have extensive experience ranging from creating corporate identities to designing publication materials. I have also frequently been involved in frontend development for websites.<br>
 					<br>
-					I am also currently working as an accessibility expert, which involves conducting accessibility audits for various public sector entities. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and accustomed to prioritizing accessibility in design.<br>
+					I am currently working as an accessibility expert, which involves conducting accessibility audits for various public sector entities. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and accustomed to prioritizing accessibility in design.<br>
 					<br>
 					I have graduated from Pekka Halonen Academy in 2018 as a visual artisan, competence area in graphic design. I have since worked in an advertising agency, a web design agency and as a freelancer. In 2020–2024 I studied UX &amp; UI design in LAB Institute of Design and Fine Arts. In addition to the design field, I have a background in sales and customer service, which has taught me negotiation skills and the ability to be sales-oriented when needed. I am proficient in working in both Finnish and English.</p>
 				</div>
