--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 					<a class="button" href="lova.html">View Lova</a>
 				</div>
 				<div class="content-field card">
-					<img src="Liitteet/Preeriapingviini/Etusivu.png" alt="Preeriapingviini">
-					<a class="button" href="preeriapingviini.html">View Preeriapingviini</a>
+					<img src="Liitteet/Lekatech/Hammer.png" alt="Lekatech">
+					<a class="button" href="lekatech.html">View Lekatech</a>
 				</div>
 				<div class="content-field card">
 					<img src="Liitteet/Staffroom/Flyers.png" alt="Staffroom">
