--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<br>
 					I am currently working as an accessibility expert, which involves conducting accessibility audits for various public sector entities. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and accustomed to prioritizing accessibility in design.<br>
 					<br>
-					I have graduated from Pekka Halonen Academy in 2018 as a visual artisan, competence area in graphic design. I have since worked in an advertising agency, a web design agency and as a freelancer. In 2020–2024 I studied UX &amp; UI design in LAB Institute of Design and Fine Arts. In addition to the design field, I have a background in sales and customer service, which has taught me strong communication and co-operational skills and the ability to be sales-oriented when needed. I am proficient in working in both Finnish and English.</p>
+					I have graduated from Pekka Halonen Academy in 2018 as a visual artisan, competence area in graphic design. I have since worked in an advertising agency, a web design agency and as a freelancer. In 2020–2024 I studied UX &amp; UI design in LAB Institute of Design and Fine Arts. Aside the design field, I have a background in sales and customer service, which has taught me strong communication and co-operational skills and the ability to be sales-oriented when needed. I am proficient in working in both Finnish and English.</p>
 				</div>
 				<div class="content-field" style="width: 40%;">
 					<h3>Skills</h3>
