--- a/vuorox.html
+++ b/vuorox.html
@@ -30,7 +30,7 @@
 			<h1>Vuorox</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>The assignment was to come up with a concept for Plaincomplex's Vuorox, an app where nurses can check and manage their shifts. The goal was not to build a finished product, but a concept model that customers can utilize however they wish to further develop their app later. The project was carried out by a three-person team, including myself. I was part of every step of the process.<br>
+					<p>The task was to design a concept for Plaincomplex's Vuorox, an app where nurses can check and manage their shifts. The goal was not to build a finished product, but a concept model that customers can utilize however they wish to further develop their app later. The project was carried out by a three-person team, including myself. I was part of every step of the process.<br>
 					<br>
 					To build a user-friendly concept, we mapped out the end users' needs by conducting semi-structured interviews with nurses. From the interviews we discovered users' main priorities (maximum control over work shifts, simplicity in observing upcoming shifts) and the most common user types (diginatives, change-resistant senior employees and non-finnish speaking employees).<br>
 					<br>
