--- a/lova.html
+++ b/lova.html
@@ -31,7 +31,7 @@
 			<h1>Lohjan Vuokra-asunnot</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>The assignment was to update Lova's website, mostly in terms of appearance, content hierarchy and accessibility. My role was to create a layout model of the new website in Figma, in which different ideas and customers' wishes could be tested with low threshold before actual implementation of the website. There were limitations to consider: website was updated with Lova's visual identity in mind, which included logo, color scheme and fonts among other things. Also, the contents of the website remained roughly the same, only their location and hierarchy were affected.<br>
+					<p>The task was to update Lova's website, mostly in terms of appearance, content hierarchy and accessibility. My role was to create a layout model of the new website in Figma, in which different ideas and customers' wishes could be tested with low threshold before actual implementation of the website. There were limitations to consider: website was updated with Lova's visual identity in mind, which included logo, color scheme and fonts among other things. Also, the contents of the website remained roughly the same, only their location and hierarchy were affected.<br>
 					<br>
 					I also participated in the website's WordPress development in a supporting role, mostly updating contents to the site and writing CSS. Accessibility was a key component of the development process. The website was built with WCAG standards in mind and later inspected with Axe DevTools to ensure web accessibility requirements were met.</p>
 				</div>
