--- a/lekatech.html
+++ b/lekatech.html
@@ -30,7 +30,7 @@
 			<h1>Lekatech</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>Assignment was to come up with a UI for an electric breaker hammer. The project was done in collaboration with industrial design students who designed the hammer itself. The hammer-team and the UI-team (me +1) worked separately but with constant check-ups and critiques from one another.<br>
+					<p>The task was to come up with a UI for an electric breaker hammer. The project was done in collaboration with industrial design students who designed the hammer itself. The hammer-team and the UI-team (me +1) worked separately but with constant check-ups and critiques from one another.<br>
 					<br>
 					Breaker hammers are used in excavators for mining, quarries, excavation and demolition, the hammer is brought in to chip away at large boulders or concrete structures. Hammering starts when the user presses a pedal with their foot. Earlier the only hammers on the market were hydraulic so electric ones were a new invention. The difference is that the electric hammer can be controlled via a touchscreen device (device we made the UI for) from the excavator cabin so that the impact energy and the frequency of hammering can be changed.<br>
 					<br>
