--- a/citycon.html
+++ b/citycon.html
@@ -30,7 +30,7 @@
 			<h1>Citycon</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>While I was working as an intern in an advertising agency, Citycon was one of the bigger clients for whom I did commissioned work. These included such things as shopping mall maps, price canvases and name tags. The designs were made with strict brand guidelines in mind.</p>
+					<p>Citycon was one of the bigger clients for whom I did commissioned work while I worked in an advertising agency. These included such things as shopping mall maps, price canvases and name tags. The designs were made with strict brand guidelines in mind.</p>
 				</div>
 				<hr>
 				<div class="content-field" style="width: 33%;">
@@ -44,7 +44,6 @@
 		</div>
 		
 		<div class="content-field">
-			<h2>Work samples</h2>
 			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Citycon/Rintaneula.png" alt="Name tag">
