--- a/index.html
+++ b/index.html
@@ -87,9 +87,18 @@
 					<img src="Liitteet/Lekatech/Hammer.png" alt="Lekatech">
 					<a class="button" href="lekatech.html">View Lekatech</a>
 				</div>
+			</div>
+			<div class="column">
 				<div class="content-field card">
 					<img src="Liitteet/Staffroom/Flyers.png" alt="Staffroom">
 					<a class="button" href="staffroom.html">View Staffroom</a>
+				</div>
+				<div class="content-field card">
+					<img src="Liitteet/Citycon/omena_hintapohja.png" alt="Citycon">
+					<a class="button" href="citycon.html">View Citycon</a>
+				</div>
+				<div class="content-field card">
+					
 				</div>
 			</div>
 		</div>
