--- a/staffroom.html
+++ b/staffroom.html
@@ -30,7 +30,7 @@
 			<h1>Staffroom</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>Staffroom previously operated under a different business name, and due to the transition to the current one, I was asked to design a new corporate look and visual identity for the company. I therefore designed a new logo, as well as defined new fonts, colors, and other brand elements for the client. At the client's request, I created two logo options that they could use as they saw fit depending on the situation. After that, I produced various commissioned works for the client, such as forms, banners, business cards, and flyers over the course of a few years.</p>
+					<p>Staffroom previously operated under a different business name, and due to the transition to the current one, I was asked to design a new corporate look and visual identity for the company. I therefore designed a new logo, as well as defined new fonts, colors, and other brand elements for the client. At the client's request, I created two logo options that they could use as they saw fit depending on the situation. After that, I produced various commissioned works for the client, such as banners and flyers over the course of a few years.</p>
 				</div>
 				<hr>
 				<div class="content-field info">
@@ -54,9 +54,6 @@
 				<div class="content-field sample">
 					<img src="Liitteet/Staffroom/Flyers.png" alt="Flyers">
 				</div>
-				<div class="content-field sample">
-					<img src="Liitteet/Staffroom/Business-card.png" alt="Business Card">
-				</div>
 			</div>
 			<div class="column">
 				<div class="content-field sample">
@@ -65,7 +62,6 @@
 				<div class="content-field sample">
 					<img src="Liitteet/Staffroom/Form-transparent.png" alt="Form">
 				</div>
-				<div class="content-field"></div>
 			</div>
 		</div>
 		
