--- a/staffroom.html
+++ b/staffroom.html
@@ -28,6 +28,11 @@
 		
 		<div class="content-field">
 			<h1>Staffroom</h1>
+			<div class="column>
+				<div class="tag">Branding</div>
+				<div class="tag">Design&nbsp;system</div>
+				<div class="tag">Desktop&nbsp;publishing</div>
+			</div>	
 			<div class="column">
 				<div class="content-field">
 					<p>Staffroom previously operated under a different business name, and due to the transition to the current one, I was asked to design a new corporate look and visual identity for the company. I therefore designed a new logo, as well as defined new fonts, colors, and other brand elements for the client. At the client's request, I created two logo options that they could use as they saw fit depending on the situation. After that, I produced various commissioned works for the client, such as banners and flyers over the course of a few years.</p>
