--- a/staffroom.html
+++ b/staffroom.html
@@ -28,7 +28,7 @@
 		
 		<div class="content-field">
 			<h1>Staffroom</h1>
-			<div class="column>
+			<div class="column">
 				<div class="tag">Branding</div>
 				<div class="tag">Design&nbsp;system</div>
 				<div class="tag">Desktop&nbsp;publishing</div>
