--- a/citycon.html
+++ b/citycon.html
@@ -28,14 +28,15 @@
 		
 		<div class="content-field">
 			<h1>Citycon</h1>
+			<div class="tagsection headertags">
+				<div class="tag">Desktop&nbsp;publishing</div>
+			</div>
 			<div class="column">
 				<div class="content-field">
 					<p>Citycon was one of the bigger clients for whom I did commissioned work while I worked in an advertising agency. These included such things as shopping mall maps, price canvases and name tags. The designs were made with strict brand guidelines in mind.</p>
 				</div>
 				<hr>
 				<div class="content-field" style="width: 33%;">
-					<h3>My role</h3>
-					<p>Desktop&nbsp;publishing</p>
 					<h3>Tools</h3>
 					<p>Adobe Indesign<br>
 					Adobe Illustrator</p>
