--- a/lova.html
+++ b/lova.html
@@ -29,6 +29,10 @@
 
 		<div class="content-field">
 			<h1>Lohjan Vuokra-asunnot</h1>
+			<div class="tagsection headertags">
+				<div class="tag">Prototyping</div>
+				<div class="tag">Web&nbsp;development</div>
+			</div>
 			<div class="column">
 				<div class="content-field">
 					<p>The task was to update Lova's website, mostly in terms of appearance, content hierarchy and accessibility. My role was to create a layout model of the new website in Figma, in which different ideas and customers' wishes could be tested with low threshold before actual implementation of the website. There were limitations to consider: website was updated with Lova's visual identity in mind, which included logo, color scheme and fonts among other things. Also, the contents of the website remained roughly the same, only their location and hierarchy were affected.<br>
@@ -40,9 +44,6 @@
 					<h3>Team</h3>
 					<p>Aki&nbsp;Wallasvaara<br>
 					Janne&nbsp;Lahti</p>
-					<h3>My role</h3>
-					<p>Prototyping<br>
-					Web&nbsp;development</p>
 					<h3>Tools</h3>
 					<p>Figma<br>
 					Wordpress</p>
