--- a/vuorox.html
+++ b/vuorox.html
@@ -28,6 +28,11 @@
 	<main>
 		<div class="content-field">
 			<h1>Vuorox</h1>
+			<div class="tagsection headertags">
+				<div class="tag">Interviews</div>
+				<div class="tag">Concept&nbsp;development</div>
+				<div class="tag">Prototyping</div>
+			</div>	
 			<div class="column">
 				<div class="content-field">
 					<p>The task was to design a concept for Plaincomplex's Vuorox, an app where nurses can check and manage their shifts. The goal was not to build a finished product, but a concept model that the customer can utilize however they wish to further develop their app later. The project was carried out by a three-person team, including myself. I was part of every step of the process.<br>
@@ -41,10 +46,6 @@
 					<h3>Team</h3>
 					<p>Laura&nbsp;Miettinen<br>
 					Iina&nbsp;Remonen</p>
-					<h3>My role</h3>
-					<p>Interviews<br>
-					Concept&nbsp;development<br>
-					Prototyping</p>
 					<h3>Tools</h3>
 					<p>Figma</p>
 				</div>
