--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					<a class="button" href="staffroom.html">View Staffroom</a>
 				</div>
 				<div class="content-field card">
-					<img src="Liitteet/Citycon/omena_hintapohja.png" alt="Citycon">
+					<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
 					<a class="button" href="citycon.html">View Citycon</a>
 				</div>
 				<div class="content-field card">
