--- a/citycon.html
+++ b/citycon.html
@@ -50,7 +50,7 @@
 					<img src="Liitteet/Citycon/Rintaneula.png" alt="Name tag">
 				</div>
 				<div class="content-field sample">
-					<img src="Liitteet/Citycon/omena_hintapohja.png" alt="Price canvas">
+					<img src="Liitteet/Citycon/Canvas.png" alt="Price canvas">
 				</div>
 				<div class="content-field sample">
 					<img src="Liitteet/Citycon/map.png" alt="Citycon Lego tour map">
