--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 					<a class="button" href="citycon.html">View Citycon</a>
 				</div>
 				<div class="content-field card">
-					
+					<img src="Liitteet/Instrumentarium/Coupons.png" alt="Instrumentarium">
+					<a class="button" href="instrumentarium.html">View Instrumentarium</a>
 				</div>
 			</div>
 		</div>
