--- a/lekatech.html
+++ b/lekatech.html
@@ -28,6 +28,10 @@
 		
 		<div class="content-field">
 			<h1>Lekatech</h1>
+			<div class="tagsection headertags">
+				<div class="tag">Wireframing</div>
+				<div class="tag">Prototyping</div>
+			</div>	
 			<div class="column">
 				<div class="content-field">
 					<p>The task was to design a UI for an electric breaker hammer. The project was done in collaboration with industrial design students who designed the hammer itself. The hammer-team and the UI-team (me +1) worked separately but with constant check-ups and critiques from one another.<br>
@@ -40,9 +44,6 @@
 				<div class="content-field info">
 					<h3>UI team</h3>
 					<p>Karoliina&nbsp;Muukka</p>
-					<h3>My role</h3>
-					<p>Wireframing<br>
-					Prototyping</p>
 					<h3>Tools</h3>
 					<p>Figma</p>
 				</div>
