--- a/citycon.html
+++ b/citycon.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="column">
 				<div class="content-field">
-					<p>Citycon was one of the bigger clients for whom I did commissioned work while I worked in an advertising agency. These included such things as shopping mall maps, price canvases and name tags. The designs were made with strict brand guidelines in mind.</p>
+					<p>Citycon was one of the clients for whom I did commissioned work while working at an advertising agency. These included such things as shopping mall maps, price canvases and name tags. The designs were made with strict brand guidelines in mind.</p>
 				</div>
 				<hr>
 				<div class="content-field" style="width: 33%;">
