--- a/vuorox.html
+++ b/vuorox.html
@@ -29,7 +29,7 @@
 		<div class="content-field">
 			<h1>Vuorox</h1>
 			<div class="tagsection headertags">
-				<div class="tag">Interviews</div>
+				<div class="tag">User research</div>
 				<div class="tag">Concept&nbsp;development</div>
 				<div class="tag">Prototyping</div>
 			</div>	
