--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="content-field"  id="aboutme">
 			<div class="column reversed">
 				<div class="content-field" style="justify-content: center;">
-					<h1 style="text-align: left;">UX &amp; UI designer with expertise in accessibility</h1>
+					<h1 style="text-align: left;">About me</h1>
 				</div>
 				<div class="content-field" style="width: 40%;">
 					<div class="pictureframe">
