--- a/index.html
+++ b/index.html
@@ -27,16 +27,10 @@
 	<main>
 
 		<div class="content-field"  id="aboutme">
-			<div class="column reversed">
-				<div class="content-field" style="justify-content: center;">
-					<h1 style="text-align: left;">About me</h1>
-				</div>
-				<div class="content-field" style="width: 40%;">
-					<div class="pictureframe">
-						<img src="Liitteet/Profiilikuva.jpg" alt="Picture of me">
-					</div>
-				</div>
+			<div class="pictureframe">
+				<img src="Liitteet/Profiilikuva.jpg" alt="Picture of me">
 			</div>
+			<h1>About me</h1>
 			<div class="column">
 				<div class="content-field">
 					<p>I am a UX &amp; UI professional from Helsinki, with a background in graphic design. I am proficient in various user research, conceptualization, and usability testing methods, as well as the implementation of interactive prototypes. As a graphic designer, I have extensive experience ranging from creating corporate identities to designing publication materials. I have also frequently been involved in front-end development for websites.<br>
