--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<h1>About me</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>I am a UX &amp; UI professional from Helsinki, with a background in graphic design. I am proficient in various user research, conceptualization, and usability testing methods, as well as the implementation of interactive prototypes. As a graphic designer, I have extensive experience ranging from creating corporate identities to designing publication materials. I have also frequently been involved in front-end development for websites.<br>
+					<p>I am a UX &amp; UI designer from Helsinki, with a background in graphic design. I am proficient in various user research, conceptualization, and usability testing methods, as well as the implementation of interactive prototypes. As a graphic designer, I have extensive experience ranging from creating corporate identities to designing publication materials. I have also frequently been involved in front-end development for websites.<br>
 					<br>
 					I am currently working as an accessibility expert, which involves conducting accessibility audits for various public sector entities. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and accustomed to prioritizing accessibility in design.<br>
 					<br>
