--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<h1>About me</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>I am a versatile design professional specialized in UX, UI and graphic design, dabbling in web front-end development. I am proficient in various user research, conceptualization, and usability testing methods, as well as the implementation of interactive prototypes. I also have extensive graphic design experience ranging from creating corporate identities to designing publication materials.<br>
+					<p>I am a versatile design professional specialized in UX, UI and graphic design, dabbling in web front-end development. I am proficient in various user research, conceptualization, and usability testing methods, as well as the implementation of interactive prototypes. I also have extensive experience in graphic design, ranging from the design of corporate identities to publication materials.<br>
 					<br>
 					I have graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked in an advertising agency, a web design agency and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts and am currently working as a UX designer and an accessibility expert, which involves conducting accessibility audits for various public sector entities. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and accustomed to prioritizing accessibility in design. Aside from the design field, I have a background in sales and customer service, which has taught me strong communication and co-operational skills and the ability to be sales-oriented when needed. I am proficient in working in both Finnish and English.</p>
 				</div>
