--- a/citycon.html
+++ b/citycon.html
@@ -52,6 +52,11 @@
 				<div class="content-field sample">
 					<img src="Liitteet/Citycon/Canvas.png" alt="Price canvas">
 				</div>
+			</div>
+			<div class="column">
+				<div class="content-field sample">
+					<img src="Liitteet/Citycon/Mediacard.png" alt="Mediacard">
+				</div>
 				<div class="content-field sample">
 					<img src="Liitteet/Citycon/map.png" alt="Citycon Lego tour map">
 				</div>
