--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 						<div class="tag">Figma</div>
 						<div class="tag">Adobe Id, Ai, Ps</div>
 						<div class="tag">HTML &amp; CSS</div>
+						<div class="tag">Wordpess</div>
 						<div class="tag">Axe DevTools</div>
 						<div class="tag">Wave</div>
 						<div class="tag">Office 365</div>
