--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<div class="tag">Figma</div>
 						<div class="tag">Adobe Id, Ai, Ps</div>
 						<div class="tag">HTML &amp; CSS</div>
-						<div class="tag">Wordpess</div>
+						<div class="tag">Wordpress</div>
 						<div class="tag">Office 365</div>
 					</div>
 					<div class="minisection">
