--- a/lova.html
+++ b/lova.html
@@ -59,8 +59,13 @@
 				<div class="content-field sample">
 					<img src="Liitteet/Lova/Asukkaalle.png" alt="Asukkaalle-page">
 				</div>
+			</div>
+			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Lova/Asukastoiminta.png" alt="Asukastoiminta-page">
+				</div>
+				<div class="content-field sample">
+					<img src="Liitteet/Lova/Blogi.png" alt="Blog page">
 				</div>
 			</div>
 		</div>
