--- a/index.html
+++ b/index.html
@@ -38,19 +38,14 @@
 					I have graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts and am currently working with the title of UX designer. My role has recently included accessibility specialist tasks, which involve conducting accessibility audits for public sector entities. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them. Aside from the design field, I have a background in sales and customer service, which has taught me strong communication and co-operational skills and the ability to be sales-oriented when needed. I am proficient in working in both Finnish and English.</p>
 				</div>
 				<div class="content-field" style="width: 40%;">
-					<h3>Skills</h3>
 					<div class="tagsection">
 						<div class="tag">UX &amp; UI</div>
 						<div class="tag">Graphic Design</div>
 						<div class="tag">Accessibility</div>
 						<div class="tag">Front&#8209;end</div>
-						<div class="tag">Customer service</div>
-					</div>
-					<h3>Tools</h3>
-					<div class="tagsection">
-						<div class="tag">Figma</div>
-						<div class="tag">Adobe Id, Ai, Ps</div>
 						<div class="tag">HTML &amp; CSS</div>
+						<div class="tag">Figma</div>
+						<div class="tag">Adobe</div>
 						<div class="tag">Wordpress</div>
 						<div class="tag">Office 365</div>
 					</div>
