--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					</div>
 				</div>
 				<div class="content-field">
-					<h1>About me</h1>
+					<h1 style="text-align: left;">About me</h1>
 					<p>I am a versatile designer specializing in UX, UI and graphic design, while also dabbling in web front-end development. I am proficient in various user research, conceptualization, and usability testing methods, as well as in implementing interactive prototypes. I have extensive practical experience ranging from designing corporate identities to building websites.<br>
 					<br>
 					I have graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts and am currently working with the title of UX designer. My role has recently included accessibility specialist tasks, which involve conducting accessibility audits for public sector entities. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them. Aside from the design field, I have a background in sales and customer service, which has taught me strong communication and co-operational skills and the ability to be sales-oriented when needed. I am proficient in working in both Finnish and English.</p>
