--- a/vuorox.html
+++ b/vuorox.html
@@ -26,23 +26,29 @@
 <!--MAIN-->	
 	
 	<main>
-		<div class="content-field">
-			<h1>Vuorox</h1>
+		<div class="content-field reversed">
 			<div class="column">
 				<div class="content-field">
+					<h1>Vuorox</h1>
 					<p>The task was to design a concept for Plaincomplex's Vuorox, an app where nurses can check and manage their shifts. The goal was not to build a finished product, but a concept model that the customer can utilize however they wish to further develop their app later. The project was carried out by a three-person team, including myself. I was part of every step of the process.<br>
 					<br>
 					To build a user-friendly concept, we mapped out the end users' needs by conducting semi-structured interviews with nurses. From the interviews we discovered users' main priorities (maximum control over work shifts, simplicity in observing upcoming shifts) and the most common user types (diginatives, change-resistant senior employees and non-finnish speaking employees).<br>
 					<br>
 					Based on the research we used user flows to map out the main use scenarios and determined design drivers for our app (perceivable at a glance, gives a sense of control, considers different needs, is trustworthy). After that we finally designed a prototype of the app with Figma. We used it to demonstrate the key functions: checking upcoming shifts, leaving shift and day off requests and managing general work time requests. All the UI elements were tested for accessibility.</p>
-				</div>
-				<hr>
-				<div class="content-field info">
-					<h3>Team</h3>
-					<p>Laura&nbsp;Miettinen<br>
-					Iina&nbsp;Remonen</p>
-					<h3>Tools</h3>
-					<p>Figma</p>
+					<div class="column">
+						<div class="content-field info">
+							<h3>Team</h3>
+							<p>Laura&nbsp;Miettinen<br>
+							Iina&nbsp;Remonen</p>
+						</div>
+						<div class="content-field info">
+							<h3>Tools</h3>
+							<p>Figma</p>
+						</div>
+					</div>
+				</div>				
+				<div class="content-field">
+					<img src="Liitteet/Vuorox/Process.png" alt="Process picture">
 				</div>
 			</div>
 		</div>
