--- a/vuorox.html
+++ b/vuorox.html
@@ -48,7 +48,7 @@
 					</div>
 				</div>				
 				<div class="content-field">
-					<img src="Liitteet/Vuorox/Process.png" alt="Process picture">
+					<img src="Liitteet/Vuorox/Vuorox.png" alt="Vuorox image">
 				</div>
 			</div>
 		</div>
