--- a/vuorox.html
+++ b/vuorox.html
@@ -64,6 +64,7 @@
 		</div>
 		
 		<div class="content-field">
+			<h2>Work samples</h2>
 			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Vuorox/Etusivu.png" alt="Landing page">
