--- a/vuorox.html
+++ b/vuorox.html
@@ -32,12 +32,12 @@
 					<h1>Vuorox</h1>
 					<p>The task was to design a concept for Plaincomplex's Vuorox, an app where nurses check and manage their shifts. The goal was not to build a finished product, but a concept model that the customer can utilize however they wish to further develop their app later. The project was carried out by a three-person team, including myself. I was part of every step of the process.</p>
 					<div class="column">
-						<div class="content-field info">
+						<div class="content-field">
 							<h3>Team</h3>
 							<p>Laura&nbsp;Miettinen<br>
 							Iina&nbsp;Remonen</p>
 						</div>
-						<div class="content-field info">
+						<div class="content-field">
 							<h3>Tools</h3>
 							<p>Figma</p>
 						</div>
