--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 			</div>
 			<div class="column">
 				<div class="content-field card">
-					<img src="Liitteet/Staffroom/Flyers.png" alt="Staffroom">
-					<a class="button" href="staffroom.html">View Staffroom</a>
+					<img src="Liitteet/Ellibs/Ellibs.png" alt="Ellibs">
+					<a class="button" href="staffroom.html">View Ellibs</a>
 				</div>
 				<div class="content-field card">
 					<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
