--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="column">
 				<div class="content-field card">
 					<img src="Liitteet/Ellibs/Ellibs.png" alt="Ellibs">
-					<a class="button" href="staffroom.html">View Ellibs</a>
+					<a class="button" href="ellibs.html">View Ellibs</a>
 				</div>
 				<div class="content-field card">
 					<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
