--- a/index.html
+++ b/index.html
@@ -44,27 +44,6 @@
 					</div>
 				</div>
 				<div class="content-field">
-					<h1>Work&nbsp;samples</h1>
-					<div class="column">
-						<div class="content-field card">
-							<img src="Liitteet/Vuorox/Vuorox.png" alt="Vuorox" >
-							<a class="button" href="vuorox.html">View Vuorox</a>
-						</div>
-						<div class="content-field card">
-							<img src="Liitteet/Lova/Etusivu.png" alt="Lova">
-							<a class="button" href="lova.html">View Lova</a>
-						</div>
-					</div>
-					<div class="column">
-						<div class="content-field card">
-							<img src="Liitteet/Ellibs/Ellibs.png" alt="Ellibs">
-							<a class="button" href="ellibs.html">View Ellibs</a>
-						</div>
-						<div class="content-field card">
-							<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
-							<a class="button" href="citycon.html">View Citycon</a>
-						</div>
-					</div>
 					<h1>About me</h1>
 					<p>I am a versatile UX, UI and graphic designer, who is also dabbling in web front-end development. I am proficient in various user research, conceptualization, and usability testing methods, as well as in implementing interactive prototypes. My work role has also recently included accessibility specialist tasks, which involve conducting accessibility audits for public sector entities. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them.<br>
 					<br>
@@ -74,6 +53,27 @@
 		</div>
 		
 		<div class="content-field" id="worksamples">
+			<h1 style="text-align: center;">Work&nbsp;samples</h1>
+			<div class="column">
+				<div class="content-field card">
+					<img src="Liitteet/Vuorox/Vuorox.png" alt="Vuorox" >
+					<a class="button" href="vuorox.html">View Vuorox</a>
+				</div>
+				<div class="content-field card">
+					<img src="Liitteet/Lova/Etusivu.png" alt="Lova">
+					<a class="button" href="lova.html">View Lova</a>
+				</div>
+			</div>
+			<div class="column">
+				<div class="content-field card">
+					<img src="Liitteet/Ellibs/Ellibs.png" alt="Ellibs">
+					<a class="button" href="ellibs.html">View Ellibs</a>
+				</div>
+				<div class="content-field card">
+					<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
+					<a class="button" href="citycon.html">View Citycon</a>
+				</div>
+			</div>
 		</div>
 
 	</main>
