--- a/vuorox.html
+++ b/vuorox.html
@@ -30,7 +30,7 @@
 			<div class="column">
 				<div class="content-field">
 					<h1>Vuorox</h1>
-					<p>The task was to design a concept for Plaincomplex's Vuorox, an app where nurses check and manage their shifts. The goal was not to build a finished product, but a concept model that the customer can utilize however they wish to further develop their app later. The project was carried out by a three-person team, including myself. I was part of every step of the process.</p>
+					<p>The task was to design a concept for Plaincomplex's Vuorox, an app where nurses check and manage their shifts. The goal was not to build a finished product, but a concept model that the client can utilize however they wish to further develop their app later. The project was carried out by a three-person team, including myself. I was part of every step of the process.</p>
 					<div class="column">
 						<div class="content-field">
 							<h3>Team</h3>
