--- a/vuorox.html
+++ b/vuorox.html
@@ -58,7 +58,7 @@
 					<h2>Process summary</h2>
 					<p>To build a user-friendly concept, we mapped out the end users' needs by conducting semi-structured interviews with nurses. From the interviews we discovered users' main priorities (maximum control over work shifts, simplicity in observing upcoming shifts) and the most common user types (diginatives, change-resistant senior employees and non-finnish speaking employees).<br>
 					<br>
-					Based on the research we used user flows to map out the main use scenarios and determined design drivers for our app (perceivable at a glance, gives a sense of control, considers different needs, is trustworthy). After that we finally designed a prototype of the app with Figma. We used it to demonstrate the key functions: checking upcoming shifts, leaving shift and day off requests and managing general work time requests. All the UI elements were tested for accessibility.</p>
+					Based on the research we mapped out with user flows the main use scenarios and determined design drivers for our app (perceivable at a glance, gives a sense of control, considers different needs, is trustworthy). After that we designed a prototype of the app with Figma. We used it to demonstrate the key functions: checking upcoming shifts, leaving shift and day off requests and managing general work time requests. All the UI elements were tested for accessibility.</p>
 				</div>
 			</div>
 		</div>
